--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,10 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".SelectSheetListView"
-            android:label="SelectSheetListView">
+            android:label="@string/title_disposal_view">
         </activity>
         <activity android:name=".ProductListView"
-            android:label="ProductListView">
+            android:label="@string/title_product_view">
         </activity>
     </application>
 
